# KN

./: .clang-format  .gitignore  .gitmodules  0.cfg  0.pos  1.cfg  CMakeLists.txt  CMakeSettings.json  COUTPUT.txt  Kn_Main.cpp  POSCAR  README.md  build.sh  center_1  center_2  config  corner_1  corner_2  kn_test.cpp  show  show.ovito  test.pos
cmake/: FindARMADILLO.cmake  FindEigen3.cmake  FindTensorFlow.cmake  armadillo-config.cmake
deprecated/: Analysis.h  BondCounter.h  ChainKMCSimulation.cpp  ChainKMCSimulation.h  ClusterExpansion.cpp  ClusterExpansion.h  ClustersFinder.cpp  ClustersFinder.h  ConfigGenerator.cpp  ConfigGenerator.h  ConfigModifier.h  DftAnalysis.cpp  DftAnalysis.h  Encode.cpp  FCCConfig.cpp  FCCConfig.h  KMCSimulation.cpp  KMCSimulation.h  MpiClusters.cpp  MpiClusters.h  MpiIterator.cpp  MpiIterator.h  NebDistance.cpp  NebDistance.h
include/: AntiPhaseConfig.h  Atom.h  AtomClass.h  AtomUtility.h  Bond.h  BondCounter.h  ClusterExpansion.h  ClusterFinder.h  ClustersFinder.h  Config.h  ConfigGenerator.h  ConfigIO.h  ConfigModifier.h  ConfigUtility.h  Configuration.h  Constants.h  DftAnalysis.h  Elem.inl  ElemInfo.h  Encode.h  EncodeGenerator.h  FCCConfig.h  KMCEvent.h  KMCSimulation.h  LRUCache.h  Matrix33.h  MpiClusters.h  MpiIterator.h  MpiNeighbors.h  NebDistance.h  Uti.h  VASPGenerator.h  Vector3.h  VectorMatrix.h
kn/ansys/: CMakeLists.txt
kn/ansys/include/: Analysis.h  BondCounting.h  ClusterExpansion.h  ClustersFinder.h  MpiClusters.h  MpiIterator.h  WarrenCowley.h
kn/ansys/src/: Analysis.cpp  BondCounting.cpp  ClusterExpansion.cpp  ClustersFinder.cpp  MpiClusters.cpp  MpiIterator.cpp  WarrenCowley.cpp
kn/api/include/: Parameter.h
kn/api/src/: Parameter.cpp
kn/cfg/: CMakeLists.txt
kn/cfg/include/: Atom.h  Bond.h  Bond.hpp  Cluster.hpp  Clusters.hpp  Config.h  Constants.h  Constants.hpp  Lattice.hpp  VectorMatrix.h  VectorMatrix.hpp
kn/cfg/src/: Atom.cpp  Bond.cpp  ClustersFinder.cpp  Config.cpp  ConfigIO.cpp
kn/kmc/: CMakeLists.txt
kn/kmc/include/: BEPBarrierPredictor.h  BarrierPredictor.h  ChainKMCSimulation.h  ClusterExpansion.h  ClustersFinder.h  DftAnalysis.h  Encode.h  KMCEvent.h  KMCSimulation.h  LRUCacheBarrierPredictor.h  LSKMCSimulation.h  MpiClusters.h  MpiIterator.h  NovelKMCSimulation.h  SecondKMCSimulation.h
kn/kmc/src/: BEPBarrierPredictor.cpp  BarrierPredictor.cpp  ChainKMCSimulation.cpp  ClusterExpansion.cpp  ClustersFinder.cpp  DftAnalysis.cpp  Encode.cpp  KMCEvent.cpp  KMCSimulation.cpp  LRUCacheBarrierPredictor.cpp  LSKMCSimulation.cpp  MpiClusters.cpp  MpiIterator.cpp  NovelKMCSimulation.cpp  SecondKMCSimulation.cpp
kn/neb/: CMakeLists.txt
kn/neb/include/: ClusterConfigGenerator.h  ConfigGenerator.h  OrderConfigGenerator.h  SizeMisfitGenerator.h
kn/neb/src/: ClusterConfigGenerator.cpp  ConfigGenerator.cpp  SizeMisfitGenerator.cpp  VASPGenerator.cpp
scripts/: prepare_NEB.sh
src/: AntiPhaseConfig.cpp  Atom.cpp  Atom.h  AtomClass.cpp  AtomUtility.cpp  BCCConfig.cpp  BCCConfig.h  Bond.cpp  Bond.h  BondCounter.cpp  BondCounter.h  Box.cpp  Box.h  Cell.cpp  Cell.h  ClusterExpansion.cpp  ClusterFinder.cpp  ClustersFinder.cpp  Config.cpp  Config.h  ConfigGenerate.cpp  ConfigGenerator.cpp  ConfigIO.cpp  ConfigModifier.h  ConfigUtility.cpp  Configuration.cpp  Constants.h  DftAnalysis.cpp  ElemInfo.cpp  ElemInfo.h  Encode.cpp  EncodeGenerator.cpp  FCCConfig.cpp  FCCConfig.h  FCCEmbededCluster.h  HCPConfig.cpp  HCPConfig.h  KMCEvent.cpp  KMCSimulation.cpp  KNHome.cpp  (+12 more)
tools/: check_dist_pl.sh  cluster.ipynb  collect_NEB_barrier.sh  energy.gnuplot  loop_submit_NEB.sh  loop_submit_relax.sh  prepare_NEB.sh  time.gnuplot
